Fix spacing (again)

--- a/styles/student.scss
+++ b/styles/student.scss
@@ -24,6 +24,7 @@ h2 {
 p {
     color: #555555;
     font-family: "Lato", sans-serif;
+    margin-bottom: 1em;
 }
 
 .container {
@@ -41,7 +42,6 @@ img {
 
 .sub {
     font-size: 0.8em;
-    margin-bottom: 1.5em;
     font-style: italic;
 }
 
